# chat

./: .gitignore  .tmuxinator.yml  Cargo.toml  README.md
client-tui/: Cargo.toml
client-tui/src/: app.rs  history.rs  lib.rs  ui.rs
server/: Cargo.toml
server/src/: client.rs  lib.rs  protocol.rs  remote.rs  server.rs
server/src/protocol/: message.rs  request.rs  response.rs
server/src/remote/: codec.rs  packet.rs
