[workspace]
members = ["server", "client-tui"]
resolver = "3"

[workspace.package]
description = "Server and Client for a simple text chat application"
authors = ["evf (eliseuv@pm.me)"]

[workspace.dependencies]

# Argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"

# Async
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
