[package]
name = "client-tui"
version = "0.1.0"
edition = "2024"
description.workspace = true
authors.workspace = true

[dependencies]

# Chat server
server = { path = "../server" }

# Async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# CLI Arguments
clap = { workspace = true }

# TUI
crossterm = { version = "0.29", features = ["event-stream"] }

# Logging
log = { workspace = true }
log4rs = "1.4"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
ciborium = { workspace = true }
