[package]
name = "server"
version = "0.1.0"
edition = "2024"
description.workspace = true
authors.workspace = true

[dependencies]

# Argument parsing
clap = { workspace = true }

# Logging
log = { workspace = true }
env_logger = "0.11"

# Async
tokio = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Serialization
serde = { workspace = true }
ciborium = { workspace = true }
